--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 <body>
     <h1 id="h1"> Monte Carlo </h1>
     <div class="tableContainer">
-        <table id="btnTable">
-            <tr class="tr"><button id="btnAdd" class="btn">Add Row</button></tr><br>
-            <tr class="tr"><button id="btnDel" class="btn">Delete Row</button></tr><br>
-            <tr class="tr"><button id="btnEdit" class="btn">Edit Label</button></tr>
-        </table>
+        <div class="btnContainer">
+            <table id="btnTable">
+                <tr class="tr"><button id="btnAdd" class="btn">Add Row</button></tr><br>
+                <tr class="tr"><button id="btnDel" class="btn">Delete Row</button></tr><br>
+                <tr class="tr"><button id="btnEdit" class="btn">Edit Label</button></tr>
+            </table>
+        </div>
         <table id="table1">
             <thead>
                 <th id="label1" class="th"></th>
