--- a/index.html
+++ b/index.html
@@ -18,19 +18,20 @@
             <button class="button js-edit-button">Edit Label</button>
             <div class="hide-col1-container">
                 <label for="auto-calculate">Auto-Calculate</label>
-                <input type="checkbox" id="auto-calculate" class="js-auto-calculate">
+                <input type="checkbox" id="autoCalculate" class="js-auto-calculate">
             </div>
             <div class="hide-col1-container">
-                <label for="hide-col1">Hide Col1</label>
-                <input type="checkbox" id="hide-col1" class="js-hide-col1-checkbox">
+                <label for="detail">Detail</label>
+                <input type="checkbox" id="detail" class="js-detail-checkbox">
             </div>
             
         </div>
         <div class="table-container">
             <table id="table1">
                 <thead>
-                    <th class="th"></th>
-                    <th class="th"></th>
+                    <th class="th">Detail</th>
+                    <th class="th">Observed Count</th>
+                    <th class="th">% Factor</th>
                     <th class="th">Probability</th>
                     <th class="th">Cumulative Probability</th>
                     <th class="th">RNI</th>
