Added columns for output

--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
         <div class="table-container">
             <table id="table1">
                 <thead>
-                    <th class="th"></th>
-                    <th class="th"></th>
+                    <th class="th">No. Cust</th>
+                    <th class="th">No. Days</th>
                     <th class="th">Probability</th>
                     <th class="th">Cumulative Probability</th>
                     <th class="th">RNI</th>
+                    <th class="th">Day</th>
+                    <th class="th">Random</th>
+                    <th class="th">Customers</th>
                 </thead>
                 <tbody>
                         <!-- THE ADDED ROWS -->
