Added  container for average

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                 <label for="hide-col1">Hide Col1</label>
                 <input type="checkbox" id="hide-col1" class="js-hide-col1-checkbox">
             </div>
+            <div class="average-container">
+                Average Customers
+                <span class="average-output">0</span>
+            </div>
             
         </div>
         <div class="table-container">
