added average output container

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                 <label for="detail">Detail</label>
                 <input type="checkbox" id="detail" class="js-detail-checkbox">
             </div>
+            <div class="hide-col1-container">
+                Average: 
+                <span class="js-average">0</span>
+            </div>
             
         </div>
         <div class="table-container">
