--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                 Average: 
                 <span class="js-average">0</span>
             </div>
+            <button class="button js-simulate-button">Simulate</button>
+            <button class="button js-reset-button">Clear </button>
+            <button class="button js-clear-button">Clear</button>
             
         </div>
         <div class="table-container">
@@ -58,13 +61,13 @@
                     <th class="th">Random</th>
                     <th class="th">Customers</th>
                 </thead>
-                <tbody>
+                <tbody class="js-body">
                         <!-- THE ADDED ROWS -->
                 </tbody>
             </table>
         </div>
         
     </div>
-    <!-- <script src="index.js"></script> -->
+    <script src="newindex.js"></script>
 </body>
 </html>
