Implemented input validation

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                 <span class="js-average">0</span>
             </div>
             <button class="button js-simulate-button">Simulate</button>
-            <button class="button js-reset-button">Clear </button>
-            <button class="button js-clear-button">Clear</button>
+            <button class="button js-reset-button"> Reset </button>
             
         </div>
         <div class="table-container">
