Added total days and customer average

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             </div>
             <div class="hide-col1-container">
                 Average: 
-                <span class="js-average">0</span>
+                <span class="js-average" id="customerAve">0</span>
             </div>
             <button class="button js-simulate-button">Simulate</button>
-            <button class="button js-reset-button"> Reset </button>
+            <button class="button js-reset-button">Reset</button>
             
         </div>
         <div class="table-container">
