--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="button-container">
                 <button class="button js-add-button">Add Row</button>
                 <div class="details-container">
-                    <label for="detail">No. of days: </label>
+                    <label for="days">No. of days: </label>
                     <input type="number" id="days" class="input-days">
                 </div>
                 <button class="button js-simulate-button">Simulate</button>
@@ -47,7 +47,7 @@
                 </div> 
                 <div class="table-bottom-container">
                     Total Days: 
-                    <span class="total-days">0</span>
+                    <span class="total-days" id="totalDays">0</span>
                 </div>
             </div>
                 
